--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -48,7 +48,11 @@ jobs:
           libxrender-dev \
           libgstreamer1.0-dev \
           libpango1.0-dev \
-          libmysqlclient-dev
+          libmysqlclient-dev \
+          libltdl-dev \
+          autoconf \
+          automake \
+          pkg-config
 
     - name: Install Python dependencies
       run: |
@@ -65,21 +69,26 @@ jobs:
           packaging \
           setuptools \
           kivy==2.3.0 \
-          mysql-connector-python==8.0.33
+          mysql-connector-python==8.0.29
 
     - name: Initialize Buildozer
       run: |
         buildozer init
-        sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0,mysql-connector-python==8.0.33/' buildozer.spec
+        sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0,mysql-connector-python==8.0.29/' buildozer.spec
         sed -i 's/android.api = .*/android.api = 31/' buildozer.spec
         sed -i 's/android.minapi = .*/android.minapi = 21/' buildozer.spec
         sed -i 's/log_level = .*/log_level = 2/' buildozer.spec
 
     - name: Build APK
       run: |
-        buildozer android debug
-      env:
-        JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+        buildozer android debug || { echo "Build failed"; exit 1; }
+
+    - name: Debug APK Location
+      run: |
+        echo "Listing bin directory contents:"
+        ls -la bin/
+        echo "Listing all APKs in bin directory:"
+        find bin -name "*.apk"
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
