--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
@@ -68,20 +68,21 @@ jobs:
           toml \
           packaging \
           setuptools \
-          kivy==2.3.0 \
-          mysql-connector-python==8.0.29
+          kivy==2.3.0
 
     - name: Initialize Buildozer
       run: |
         buildozer init
-        sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0,mysql-connector-python==8.0.29/' buildozer.spec
+        sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0/' buildozer.spec
         sed -i 's/android.api = .*/android.api = 31/' buildozer.spec
         sed -i 's/android.minapi = .*/android.minapi = 21/' buildozer.spec
         sed -i 's/log_level = .*/log_level = 2/' buildozer.spec
 
     - name: Build APK
       run: |
-        buildozer android debug || { echo "Build failed"; exit 1; }
+        for i in {1..3}; do buildozer android debug && break || { echo "Retry $i/3"; sleep 10; }; done || { echo "Build failed after 3 retries"; exit 1; }
+      env:
+        JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
 
     - name: Debug APK Location
       run: |
@@ -91,7 +92,9 @@ jobs:
         find bin -name "*.apk"
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      if: success()
+      uses: actions/upload-artifact@v4
       with:
         name: mydatabaseapp-apk
-        path: bin/mydatabaseapp-0.1-debug.apk
+        path: bin/*.apk
+      continue-on-error: true
