Add libunwind-dev and update actions to latest versions

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -52,7 +52,8 @@ jobs:
           libltdl-dev \
           autoconf \
           automake \
-          pkg-config
+          pkg-config \
+          libunwind-dev
 
     - name: Install Python dependencies
       run: |
