--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Initialize Buildozer
       run: |
-        buildozer init
+        if [ ! -f buildozer.spec ]; then buildozer init; fi
         sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0/' buildozer.spec
         sed -i 's/android.api = .*/android.api = 31/' buildozer.spec
         sed -i 's/android.minapi = .*/android.minapi = 21/' buildozer.spec
