--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -53,7 +53,11 @@ jobs:
           autoconf \
           automake \
           pkg-config \
-          libunwind-dev
+          libunwind-dev \
+          libxml2-dev \
+          libxslt1-dev \
+          libpng-dev \
+          libjpeg-dev
 
     - name: Install Python dependencies
       run: |
@@ -78,10 +82,24 @@ jobs:
         sed -i 's/android.api = .*/android.api = 31/' buildozer.spec
         sed -i 's/android.minapi = .*/android.minapi = 21/' buildozer.spec
         sed -i 's/log_level = .*/log_level = 2/' buildozer.spec
+        sed -i 's/package.name = .*/package.name = mydatabaseapp/' buildozer.spec
+        sed -i 's/version = .*/version = 0.1/' buildozer.spec
+
+    - name: Accept Android SDK Licenses
+      run: |
+        yes | /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --sdk_root=/home/runner/.buildozer/android/platform/android-sdk --licenses
+
+    - name: Install Android SDK Build-Tools and Platform-Tools
+      run: |
+        /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --sdk_root=/home/runner/.buildozer/android/platform/android-sdk "build-tools;36.0.0" "platform-tools"
 
     - name: Build APK
       run: |
-        for i in {1..3}; do buildozer android debug && break || { echo "Retry $i/3"; sleep 10; }; done || { echo "Build failed after 3 retries"; exit 1; }
+        for i in {1..5}; do buildozer android debug && break || { echo "Retry $i/5"; sleep 10; }; done
+        if [ ! -f bin/mydatabaseapp-0.1-debug.apk ]; then
+          echo "ERROR: APK not found at bin/mydatabaseapp-0.1-debug.apk"
+          exit 1
+        fi
       env:
         JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
 
@@ -91,6 +109,8 @@ jobs:
         ls -la bin/
         echo "Listing all APKs in bin directory:"
         find bin -name "*.apk"
+        echo "Searching for APKs in the entire workspace:"
+        find . -name "*.apk"
 
     - name: Upload APK
       if: success()
