--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -78,5 +78,48 @@ jobs:
     - name: Initialize Buildozer
       run: |
         if [ ! -f buildozer.spec ]; then buildozer init; fi
-        sed -i 's/requirements = .*/requirements = python3,kivy==2.3.0/' buildozer.spec
-        sed -i 's/android.api
+        sed -i "s|^requirements =.*|requirements = python3,kivy==2.3.0|" buildozer.spec
+        sed -i "s|^android.api =.*|android.api = 31|" buildozer.spec
+        sed -i "s|^android.minapi =.*|android.minapi = 21|" buildozer.spec
+        sed -i "s|^log_level =.*|log_level = 2|" buildozer.spec
+        sed -i "s|^package.name =.*|package.name = mydatabaseapp|" buildozer.spec
+        sed -i "s|^version =.*|version = 0.1|" buildozer.spec
+
+    - name: Build APK
+      run: |
+        # Clean up Buildozer directories to avoid Git submodule issues
+        rm -rf .buildozer
+        # Run buildozer android debug with retries
+        for i in {1..5}; do
+          buildozer android debug && break || { echo "Retry $i/5"; sleep 10; }
+          # After the first failed attempt, accept licenses and install tools
+          if [ $i -eq 1 ]; then
+            echo "Accepting Android SDK licenses and installing tools..."
+            yes | /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --sdk_root=/home/runner/.buildozer/android/platform/android-sdk --licenses || true
+            /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --sdk_root=/home/runner/.buildozer/android/platform/android-sdk "build-tools;36.0.0" "platform-tools" || true
+          fi
+        done || { echo "Build failed after 5 retries"; exit 1; }
+        # Check if APK was generated
+        if [ ! -f bin/mydatabaseapp-0.1-debug.apk ]; then
+          echo "ERROR: APK not found at bin/mydatabaseapp-0.1-debug.apk"
+          exit 1
+        fi
+      env:
+        JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+
+    - name: Debug APK Location
+      run: |
+        echo "Listing bin directory contents:"
+        ls -la bin/
+        echo "Listing all APKs in bin directory:"
+        find bin -name "*.apk"
+        echo "Searching for APKs in the entire workspace:"
+        find . -name "*.apk"
+
+    - name: Upload APK
+      if: success()
+      uses: actions/upload-artifact@v4
+      with:
+        name: mydatabaseapp-apk
+        path: bin/*.apk
+      continue-on-error: true
